--- a/css/style.css
+++ b/css/style.css
@@ -68,55 +68,57 @@ table {
   src: url("//lib.baomitu.com/fonts/epilogue/epilogue-700.eot"); /* IE9 Compat Modes */
   src: local("Epilogue"), local("Epilogue-Normal"), url("//lib.baomitu.com/fonts/epilogue/epilogue-700.eot?#iefix") format("embedded-opentype"), url("//lib.baomitu.com/fonts/epilogue/epilogue-700.woff2") format("woff2"), url("//lib.baomitu.com/fonts/epilogue/epilogue-700.woff") format("woff"), url("//lib.baomitu.com/fonts/epilogue/epilogue-700.ttf") format("truetype"), url("//lib.baomitu.com/fonts/epilogue/epilogue-700.svg#Epilogue") format("svg"); /* Legacy iOS */
 }
-*, *::before, *::after {
+html {
   box-sizing: border-box;
-}
-
-img {
-  max-width: 100%;
-  vertical-align: bottom;
-}
-
-a {
-  text-decoration: none;
-}
-
-:root {
   font-size: 18px;
+  overflow-x: hidden;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 body {
   position: relative;
+  background: hsl(0deg, 0%, 98%);
   font-family: "Epilogue", sans-serif;
-  font-weight: 500;
   font-size: 1rem;
-  overflow-x: hidden;
+  font-weight: 500;
 }
 body::after {
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
-  display: block;
-  z-index: -9;
+  left: -100%;
   width: 100%;
-  height: 100%;
+  height: max(100%, 100vh);
   background: hsl(0deg, 0%, 8%);
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
 body.mask::after {
+  left: 0;
+  opacity: 0.6;
   z-index: 9;
-  opacity: 0.7;
 }
 
-.wrapper {
-  margin: 0 auto;
+a {
+  color: hsl(0deg, 0%, 41%);
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 h1 {
   position: absolute;
-  left: -99999999px;
+  left: -99999999999999px;
+}
+
+.wrapper {
+  margin: 0 auto;
 }
 
 .nav-toggle {
@@ -124,129 +126,72 @@ h1 {
   z-index: 999;
   width: 2rem;
   height: 2rem;
-  padding: 0;
+  background: url("../images/icon-menu.svg") no-repeat center;
   border: none;
-  background: url("../images/icon-menu.svg") center no-repeat;
   cursor: pointer;
 }
 .nav-toggle.close {
-  background: url("../images/icon-close-menu.svg") center no-repeat;
-}
-@media (min-width: 960px) {
-  .nav-toggle {
-    display: none;
-  }
+  background-image: url("../images/icon-close-menu.svg");
 }
 
 .nav-sidebar {
   position: absolute;
   top: 0;
-  right: -64%;
+  right: 0;
   z-index: 99;
-  width: 64%;
-  height: 100%;
-  padding: 5.8rem 1.6rem;
+  width: 68%;
+  height: max(100%, 100vh);
+  padding: 5rem 1.6rem;
+  transform: translateX(100%);
   background: hsl(0deg, 0%, 98%);
-  color: hsl(0deg, 0%, 41%);
-  transition: right 0.4s ease-in-out;
-}
-@media (min-width: 960px) {
-  .nav-sidebar {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    top: 0;
-    right: 0;
-    padding: 0;
-    background: none;
-  }
+  transition: transform 0.4s ease-in-out;
 }
 .nav-sidebar.slide-in {
-  right: 0;
+  transform: translateX(0);
 }
-.nav-sidebar a {
-  color: hsl(0deg, 0%, 41%);
-}
-.nav-sidebar .nav .nav-content {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-@media (min-width: 960px) {
-  .nav-sidebar .nav .nav-content {
-    flex-direction: row;
-  }
+.nav-sidebar .nav {
+  margin-bottom: 2.4rem;
 }
 .nav-sidebar .nav .nav-content .nav-item {
-  position: relative;
-  padding: 0.4rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1.4rem;
   cursor: pointer;
-}
-@media (min-width: 960px) {
-  .nav-sidebar .nav .nav-content .nav-item {
-    margin-bottom: 0;
-  }
-}
-.nav-sidebar .nav .nav-content .nav-item.dropdown .arrow {
-  transform: rotate(180deg);
-}
-.nav-sidebar .nav .nav-content .nav-item.dropdown .submenu-feature {
-  height: 158px;
-}
-.nav-sidebar .nav .nav-content .nav-item.dropdown .submenu-company {
-  height: 108px;
+  overflow: hidden;
 }
 .nav-sidebar .nav .nav-content .nav-item .arrow {
   display: inline-block;
   width: 10px;
   height: 6px;
-  margin-left: 1rem;
+  margin-left: 0.8rem;
   vertical-align: middle;
-  transform: rotate(0);
   background: url("../images/icon-arrow-down.svg");
-  transition: transform 0.4s ease-in-out;
 }
 .nav-sidebar .nav .nav-content .nav-item .submenu {
-  display: block;
+  padding-top: 0;
+  padding-left: 1.4rem;
   height: 0;
-  transition: height 0.4s ease-in-out;
-  overflow: hidden;
+  transition: height 0.33s ease-in-out, padding-top 0.07s 0.33s ease-in-out;
 }
-@media (min-width: 960px) {
-  .nav-sidebar .nav .nav-content .nav-item .submenu {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    transform: translateY(110%);
-    padding: 1rem;
-    width: 9rem;
-    background: white;
-  }
+.nav-sidebar .nav .nav-content .nav-item .submenu.submenu-feature.open {
+  padding-top: 1.4rem;
+  height: calc(133.55px + 1.4rem);
+}
+.nav-sidebar .nav .nav-content .nav-item .submenu.submenu-company.open {
+  height: 90px;
 }
 .nav-sidebar .nav .nav-content .nav-item .submenu .menu-item {
-  margin: 1rem;
-}
-@media (min-width: 960px) {
-  .nav-sidebar .nav .nav-content .nav-item .submenu .menu-item {
-    margin: 0;
-  }
+  margin-bottom: 1rem;
 }
 .nav-sidebar .nav .nav-content .nav-item .submenu .menu-item:last-child {
   margin-bottom: 0;
 }
 .nav-sidebar .nav .nav-content .nav-item .submenu .menu-item .icon {
-  position: relative;
-  top: 0.09rem;
   display: inline-block;
-  width: 17px;
-  height: 17px;
-  margin-right: 0.6rem;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.8rem;
   background-repeat: no-repeat;
   background-position: center;
+  vertical-align: -14%;
 }
 .nav-sidebar .nav .nav-content .nav-item .submenu .menu-item .icon.icon-todo {
   background-image: url("../images/icon-todo.svg");
@@ -262,99 +207,28 @@ h1 {
 }
 .nav-sidebar .login {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
-}
-@media (min-width: 960px) {
-  .nav-sidebar .login {
-    flex-direction: row;
-    gap: 2rem;
-    margin-top: 0;
-  }
 }
 .nav-sidebar .login a {
-  margin-bottom: 1rem;
-}
-@media (min-width: 960px) {
-  .nav-sidebar .login a {
-    margin-bottom: 0;
-  }
+  margin-bottom: 0.8rem;
 }
 .nav-sidebar .login a.register-btn {
   width: 100%;
-  padding: 0.8rem 0;
+  padding: 0.6rem;
   border: 2px solid hsl(0deg, 0%, 41%);
   border-radius: 1rem;
   text-align: center;
 }
-@media (min-width: 960px) {
-  .nav-sidebar .login a.register-btn {
-    padding: 0.8rem 1rem;
-  }
-}
 
 .header {
-  padding: 0 0.8rem;
+  color: hsl(0deg, 0%, 41%);
 }
 .header .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.6rem 0;
-}
-@media (min-width: 960px) {
-  .header .wrapper {
-    justify-content: flex-start;
-    gap: 5rem;
-  }
-}
-
-.main {
-  margin-bottom: 2rem;
-  text-align: center;
-  color: hsl(0deg, 0%, 41%);
-}
-.main .wrapper {
-  display: flex;
-  flex-direction: column;
-}
-.main .wrapper .banner {
-  display: block;
-  margin-bottom: 2rem;
-}
-.main .wrapper .main-content .main-title {
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  font-weight: 700;
-  color: hsl(0deg, 0%, 8%);
-}
-.main .wrapper .main-content .main-intro {
-  margin-bottom: 1rem;
-  line-height: 1.4rem;
-}
-.main .wrapper .main-content .more {
-  display: inline-block;
-  padding: 0.8rem 1rem;
-  margin-bottom: 2.4rem;
-  border-radius: 0.8rem;
-  color: hsl(0deg, 0%, 98%);
-  background: hsl(0deg, 0%, 8%);
-}
-.main .wrapper .main-content .client {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  width: 100%;
-}
-
-.footer .attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.footer .attribution a {
-  color: hsl(228deg, 45%, 44%);
+  padding: 1.4rem 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
