--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,57 +1,59 @@
-*, *::before, *::after {
+html {
     box-sizing: border-box;
-}
-
-img {
-    max-width: 100%;
-    vertical-align: bottom;
-}
-
-a {
-    text-decoration: none;
-}
-
-:root {
     font-size: $body-fs;
+    overflow-x: hidden;
+
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
 }
 
 body {
     position: relative;
+    // overflow-x: hidden;
+    background: $almost-white;
 
     font: {
         family: 'Epilogue', sans-serif;
-        weight: 500;
         size: 1rem;
+        weight: 500;
     }
-
-    overflow-x: hidden;
 
     &::after {
         content: '';
         position: absolute;
         top: 0;
-        left: 0;
-        display: block;
-        z-index: -9;
+        left: -100%;
         width: 100%;
-        height: 100%;
+        height: max(100%, 100vh);
         background: $almost-black;
         opacity: 0;
         transition: opacity 0.4s ease-in-out;
     }
 
     &.mask::after {
+        left: 0;
+        opacity: 0.6;
         z-index: 9;
-        opacity: 0.7;
     }
 }
 
-.wrapper {
-    // min-width: 300px;
-    margin: 0 auto;
+a {
+    color: $medium-gray;
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    vertical-align: middle;
 }
 
 h1 {
     position: absolute;
-    left: -99999999px;
+    left: -99999999999999px;
+}
+
+.wrapper {
+    margin: 0 auto;
 }
