--- a/scss/_header-section.scss
+++ b/scss/_header-section.scss
@@ -7,5 +7,10 @@
         justify-content: space-between;
         align-items: center;
         padding: 1.4rem 1rem;
+
+        @media (min-width: $breakpoint) {
+            justify-content: flex-start;
+            gap: 4rem;
+        }
     }
 }
