--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,3 +1,5 @@
+// $breakpoint: 700px;
+
 .nav-toggle {
     position: relative;
     z-index: 999;
@@ -9,6 +11,10 @@
 
     &.close {
         background-image: url('../images/icon-close-menu.svg');
+    }
+
+    @media (min-width: $breakpoint) {
+        display: none;
     }
 }
 
@@ -28,25 +34,44 @@
         transform: translateX(0);
     }
 
+    @media (min-width: $breakpoint) {
+        position: relative;
+        transform: translateX(0);
+        display: flex;
+        align-items: center;
+        padding: 0;
+        flex-grow: 1;
+        justify-content: space-between;
+    }
+
     .nav {
         margin-bottom: 2.4rem;
 
+        @media (min-width: $breakpoint) {
+            margin-bottom: 0;
+        }
+
         .nav-content {
 
+            display: flow-root;
+
             .nav-item {
+                position: relative;
                 margin-bottom: 1.4rem;
                 cursor: pointer;
-                overflow: hidden;
+                display: flow-root;
 
-                // &::before, &::after {
-                //     content: '';
-                //     display: block;
-                //     margin-bottom: 1.4rem;
-                // }
 
-                // &::before {
-                //     margin-top: 1.4rem;
-                // }
+                @media (min-width: $breakpoint) {
+                    float: left;
+                    margin-bottom: 0;
+                    margin-right: 2rem;
+                }
+
+                &:hover,
+                a:hover {
+                    color: $almost-black;
+                }
 
                 .arrow {
                     display: inline-block;
@@ -58,51 +83,52 @@
                 }
 
                 .submenu {
-                    // display: flex;
-                    // flex-direction: column;
-                    // justify-content: flex-end;
-                    // padding: 1.4rem 0 0 1.4rem;
-                    // padding: 1.4rem;
-                    // padding: 0;
-                    // padding-top: 1.4rem;
+
                     padding-top: 0;
                     padding-left: 1.4rem;
-                    // margin: 1.4rem 0;
-                    // margin-top: 1.4rem;
                     height: 0;
-                    // width: 0;
-                    // margin-top: 1.4rem;
-                    transition: height 0.33s ease-in-out,
-                    padding-top 0.07s 0.33s ease-in-out;
-                    // transition: height ,padding-top 0.4s ease-in-out;
-                    // overflow: hidden;
+                    transition: height 0.33s ease-in-out;
+                    overflow: hidden;
 
-                    // &.open {
-                    //     padding-top: 1.4rem;
-                    // }
+                    @media (min-width: $breakpoint) {
+                        position: absolute;
+                        top: 2rem;
+                        right: 0;
+                        width: calc(100% + 4rem);
+                        // padding: 1rem;
+                        border-radius: 0.6rem;
+                        box-shadow: 0 0 20px 0 rgba(110, 109, 109, 0.344);
+                        background: #fff;
 
-                    // &::before {
-                    //     content: '';
-                    //     display: block;
-                    //     margin-bottom: 0;
-                    // }
+                        &.submenu-company {
+                            left: 0;
+                            width: calc(100% + 1rem);
+                        }
 
-                    // &.submenu-feature.open::before {
-                    //     margin-bottom: 1.4rem;
-                    // }
+                        &.submenu-feature.open {
+                            height: calc(133.55px + 2 * 1.4rem) !important;
+                        }
+
+                        &.submenu-company.open {
+                            height: calc(90px + 2 * 1.4rem) !important;
+                        }
+                    }
 
                     &.submenu-feature.open {
-                        padding-top: 1.4rem;
                         height: calc(133.55px + 1.4rem);
                     }
 
                     &.submenu-company.open {
-                        height: 90px;
+                        height: calc(90px + 1.4rem);
                     }
 
                     .menu-item {
-                        // padding: 0.1rem;
+                        position: relative;
+                        top: 1.4rem;
                         margin-bottom: 1rem;
+
+                        // @media (min-width: $breakpoint) {
+                        // }
 
                         &:last-child {
                             margin-bottom: 0;
@@ -147,9 +173,26 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
+        @media (min-width: $breakpoint) {
+            flex-direction: row;
+        }
+
         a {
             margin-bottom: 0.8rem;
+
+            @media (min-width: $breakpoint) {
+                margin-bottom: 0;
+                margin-right: 2rem;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+
+            &:hover {
+                color: $almost-black;
+            }
 
             &.register-btn {
                 width: 100%;
@@ -157,6 +200,10 @@
                 border: 2px solid $medium-gray;
                 border-radius: 1rem;
                 text-align: center;
+
+                &:hover {
+                    border-color: $almost-black;
+                }
             }
         }
     }
